--- a/Assets/css/test.css
+++ b/Assets/css/test.css
@@ -28,19 +28,6 @@ h1 {
   font-family: serif;
 }
 
-/* Change header size to 180%, give it a 3% margin on top and bottom, and assign font family to serif */
-h2 {
-  margin: 3% 0;
-  font-size: 180%;
-  font-family: serif;
-}
-
-/* Change header size to 150% and assign font family to serif */
-h3 {
-  font-size: 150%;
-  font-family: serif;
-}
-
 nav ul {
   display: flex;
   justify-content: space-between;
@@ -54,17 +41,10 @@ nav a {
   text-decoration: none;
 }
 
-
-
-/*section {
-  padding-right: 5%;
-}*/
-
 .element_title {
   /*display: flex;*/
   /* Align the child elements to the top of the parent */
-  width: 20%;
-  margin: 1% auto;
+  /*width: 20%;*/
   background-color: lightgrey;
   border-right: 5px solid darkblue;
   padding-right: 10px;
@@ -73,13 +53,18 @@ nav a {
   font-size: 200%
 }
 
+section {
+display: flex;
+flex: 1 0 0;
+}
+
 .element_content {
   /*display: flex;*/
   /* Align the child elements to the top of the parent */
-  width: 80%;
+  width: 1100px;
  /*margin: 1% auto;*/
-  background-color: lightgrey;
-  padding: 50px;
+    padding: 0px;
+    background-color: lightgrey;
 }
 
 /* Add a margin to the top and bottom of the paragraphs */
@@ -113,7 +98,7 @@ footer {
   color: #fff;
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
 
   header,
   main {
@@ -128,4 +113,4 @@ footer {
     width: 100%;
     text-align: center;
   }
-}
+}*/
