Continued adjusting the layout

--- a/Assets/css/resume.css
+++ b/Assets/css/resume.css
@@ -44,7 +44,7 @@ what is the rule here?*/
 }
 
 img {
-    width: 10%
+    width: 10%;
 }
 /* add the topic hyperlinked sections and light grey background*/
 
