--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,129 +1,128 @@
-/* set the font family for the site */
-body {
+* {
+    box-sizing: border-box;
+  }
+  
+
+  body {
     font-family: Arial, Helvetica, sans-serif;
-}
+    margin: 0px 15px 0px 5px;
+  }
 
-/*main {
+   header {
     display: flex;
-    flex-wrap: wrap;
-}*/
+    padding: 15px 50px 15px 15px;
+    background: #352e41;
+    color: #fff;
+  }
+  
+  .tom {
+    width: 10%;
+  }
 
-.header_top {
-    display: flex;
-    justify-content: space-between;
-    background-color: #352e41;
-    padding: 15px 50px 15px 75px;
-}
-
-/* Make h1 font-size larger and set font-color */
-.header_top h1 {
-    color: #4d4d72;
+  h1 {
     font-size: 200%;
-}
-
-/* provide highlighting for the header name*/
-.headername {
-    background-color: lightblue;
-}
-
-/* Remove bullets and display nav list items horizontally - just adding space between and display flex
-did not work and apply padding to nav element. Q: how do I bottom align the h1 and the nav elements?
-in the header*/
-
-.header_top nav ul {
+    padding-left: 15px;
+  }
+  nav {
     display: flex;
-    list-style-type: none;
-    justify-content: space-between;
+    padding-top: 10px;
+    padding-left: 625px;
     min-width: 300px;
-}
-
-/* Q:  It seems unless I specify text color at this level it gets overwritten by user agent.
-what is the rule here?*/
-.header_top nav ul li a {
-    color: white;
-}
+  }
+  
+  nav a {
+    color: #13293d;
+    padding-left: 15px;
+    text-align: center;
+    color: #fff;
+    white-space: nowrap;
+    font-size:medium;
+  }
 
 /* add the topic hyperlinked sections and light grey background*/
 .section_topic {
-    display: flex;
-    flex-wrap: wrap;
-    background-color: lightgray;
-    justify-content: space-between;
-    color: #4d4d72;
-    padding: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: lightgray;
+  justify-content: space-between;
+  color: #4d4d72;
+  padding: 15px;
 }
 
 /* adding a right border and made width 20%*/
-* .section_topic h1 {
-    text-align: right;
-    font-size: 200%;
-    border-right: 5px solid #4d4d72;
-    padding-right: 10px;
-    width: 20%;
+.section_topic h2 {
+  text-align: right;
+  font-size: 200%;
+  border-right: 5px solid #4d4d72;
+  padding-right: 10px;
+  width: 20%;
 }
 
 .section_topic p {
-    padding: 10px;
-    width: 80%;
+  padding: 10px;
+  width: 80%;
 }
 
 .card_container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
 }
 
 .card {
-    flex: 1 1 0;
-    padding: 10px;
-    text-align: center;
+  flex: 1 1 0;
+  padding: 10px;
+  text-align: center;
 }
 
 .card header {
-    padding: 20px;
-    background: #13293d;
-    color: #fff;
+  padding: 20px;
+  background: #13293d;
+  color: #fff;
 }
 
 .card img {
-    max-width: 100%;
-    /*min-width: 100px;*/
-}
-
-.tom {
-    width: 10%;
+  max-width: 100%;
+  min-width: 100px;
 }
 
 footer {
-    height: 500px;
-    color: #4d4d72;
+  height: 500px;
+  color: #4d4d72;
 }
 
 /* Cards are split into two columns at 992px or smaller */
 @media screen and (max-width: 992px) {
-    .card {
-        width: 50%;
-    }
+  .card {
+      width: 50%;
+  }
 
-    /* Change the header color */
-    header {
-        background: #772014;
-    }
+  /* Change the header color */
+  header {
+      background: #772014;
+  }
 }
 
 /* Cards are stacked on top of each other at 768px or smaller */
 @media screen and (max-width: 768px) {
-    .card {
-        width: 100%;
-    }
+  .card_container {
+    flex-direction: column;
+  }
+  
+  .card {
+      width: 100%;      
+  }
 
-    .section_topic h1 {
-        text-align: right;
-        font-size: 50%;
-    }
-    
-    /* Change the header color */
-    header {
-        background: #8ac4ff;
-    }
+  .section_topic h1 {
+      text-align: right;
+      font-size: 50%;
+  }
+  
+  /* Change the header color */
+  header {
+      background: #8ac4ff;
+  }
 }
+
+
+
