--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2,35 +2,40 @@
     box-sizing: border-box;
   }
   
-
+  /* Set body properties: font and margins */
   body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px 15px 0px 5px;
   }
-
+  /* Set header properties: flex, padding, background color and font color */
    header {
     display: flex;
     padding: 15px 50px 15px 15px;
     background: #352e41;
     color: #fff;
   }
-  
-  .tom {
+
+  /* Set my picture property to size to 10% */
+  header img.tom {
     width: 10%;
   }
 
-  h1 {
+  /* Set my h1 for the header */
+  header h1 {
     font-size: 200%;
     padding-left: 15px;
   }
-  nav {
+
+  /* Set the nav container properties for the header */
+  header nav {
     display: flex;
     padding-top: 10px;
     padding-left: 625px;
     min-width: 300px;
   }
   
-  nav a {
+  /* Set the nav links font color, font size, spacing and alignment properties for the header */
+  header nav a {
     color: #13293d;
     padding-left: 15px;
     text-align: center;
@@ -39,7 +44,7 @@
     font-size:medium;
   }
 
-/* add the topic hyperlinked sections and light grey background*/
+/* add the topic sections, font color, spacing and light grey background*/
 .section_topic {
   display: flex;
   flex-wrap: wrap;
@@ -58,24 +63,30 @@
   width: 20%;
 }
 
+/* paragraph properties for the topics and width 80%*/
 .section_topic p {
   padding: 10px;
   width: 80%;
 }
 
+
+/* Card container properties for the topics*/
 .card_container {
   display: flex;
   flex-wrap: wrap;
   width: 80%;
 }
 
+
+/* Card properties for the topics: allows flex grow and shrink and padding*/
 .card {
   flex: 1 1 0;
   padding: 10px;
   text-align: center;
 }
 
-.card header {
+/* Card header properties for the topics */
+header.card {
   padding: 20px;
   background: #13293d;
   color: #fff;
@@ -84,11 +95,6 @@
 .card img {
   max-width: 100%;
   min-width: 100px;
-}
-
-footer {
-  height: 500px;
-  color: #4d4d72;
 }
 
 /* Cards are split into two columns at 992px or smaller */
@@ -124,6 +130,15 @@ footer {
   }
 }
 
+/* set the hover property to enlarge the cards by 10% when you position mouse over the card*/
 .card:hover {
     transform: scale(1.1);
+}
+
+/* set the footer properties*/
+footer {
+  padding: 30px;
+  clear: both;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: center;
 }
